vcs/specs/parser/fail/async/invalid_await_chain.vr
// @test: parse-fail
// @level: L0
// @tags: parser, async, await, chain, error
// @description: Test malformed await chain expression
// @expected-error: E018

async fn test() {
    // Double await is semantically weird but may parse
    // Missing expression after first await
    let x = await await;
}
